# xf86-input-evdev-spacefn

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
include/: evdev-properties.h
man/: .gitignore  Makefile.am  evdev.man
src/: Makefile.am  axis_labels.h  draglock.c  emuMB.c  emuThird.c  emuWheel.c  evdev.c  evdev.h  evdev_abs.c  evdev_axes.c  evdev_brain.c  evdev_btn.c  evdev_key.c  evdev_rel.c  inotify-syscalls.h  inotify.h  udev.c
test/: Makefile.am  abs.c  absrel.c  btn0.c  dummy.c  fakedev.c  fakedev.h
